# trading-auto-park

./: .gitignore
autotrader/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
autotrader/backend/: __init__.py  main.py
autotrader/backend/ai/: advisor.py  schemas.py
autotrader/backend/backtest/: engine.py  metrics.py  simulator.py
autotrader/backend/brokers/: base.py
autotrader/backend/brokers/kis/: auth.py  market_data.py  mock_adapter.py  order_api.py  rest_client.py  ws_client.py
autotrader/backend/config/: settings.py  strategy_config.py
autotrader/backend/execution/: fill_tracker.py  order_manager.py
autotrader/backend/monitoring/: health.py  logger.py  metrics.py
autotrader/backend/persistence/: database.py  models.py  repositories.py
autotrader/backend/persistence/migrations/: env.py
autotrader/backend/risk/: emergency.py  engine.py  safety_rails.py
autotrader/backend/strategy/: engine.py  entry_rules.py  exit_rules.py  scanner.py  signal_generator.py  state_machine.py
autotrader/backend/tests/: conftest.py  test_entry_exit_rules.py  test_risk_engine.py  test_safety_rails.py  test_state_machine.py
autotrader/frontend/: next.config.js  package.json
autotrader/frontend/app/: globals.css  layout.tsx  page.tsx
