[project]
name = "autotrader"
version = "0.1.0"
description = "Korean Aggressive Opening Momentum - 국내 주식 장초반 데이트레이딩 자동매매 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # HTTP client
    "httpx>=0.27.0",
    "websockets>=15.0.1",
    # Data processing
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.2",
    # AI (Gemini)
    "google-genai>=1.0.0",
    # Security
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    # Logging
    "structlog>=24.1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
